[gd_scene load_steps=7 format=3 uid="uid://cyb8wstwwwxci"]

[ext_resource type="Script" path="res://Scripts/r_volume_control.gd" id="1_vs528"]
[ext_resource type="AudioStream" uid="uid://dio0twbyudmye" path="res://Audio/Music/guy_rock.ogg" id="2_yx1gk"]

[sub_resource type="Animation" id="Animation_07sdw"]
resource_name = "ShowContinueKey"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qsjfg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_00rgd"]
resource_name = "HideContinueKey"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Continue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_87bsk"]
_data = {
"HideContinueKey": SubResource("Animation_00rgd"),
"RESET": SubResource("Animation_qsjfg"),
"ShowContinueKey": SubResource("Animation_07sdw")
}

[node name="rVolumeControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vs528")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0923972, 0.0923971, 0.0923967, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -68.5
offset_right = 264.0
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VoulmeCheck" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume Check"
horizontal_alignment = 1

[node name="MasterData" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Info" type="Label" parent="VBoxContainer/MasterData"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/MasterData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../StartGameButton")
focus_neighbor_bottom = NodePath("../../BGMData/BGMSlider")

[node name="ValueInfo" type="Label" parent="VBoxContainer/MasterData"]
layout_mode = 2
text = "-1%"
horizontal_alignment = 2

[node name="BGMData" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Info2" type="Label" parent="VBoxContainer/BGMData"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music"
horizontal_alignment = 2

[node name="BGMSlider" type="HSlider" parent="VBoxContainer/BGMData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../MasterData/MasterSlider")
focus_neighbor_bottom = NodePath("../../SFXData/SFXSlider")

[node name="ValueInfo" type="Label" parent="VBoxContainer/BGMData"]
layout_mode = 2
text = "-1%"
horizontal_alignment = 2

[node name="SFXData" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Info3" type="Label" parent="VBoxContainer/SFXData"]
layout_mode = 2
text = "Sound"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../BGMData/BGMSlider")
focus_neighbor_bottom = NodePath("../../ButtonTestAudio/SoundButton")

[node name="ValueInfo" type="Label" parent="VBoxContainer/SFXData"]
layout_mode = 2
text = "-1%"
horizontal_alignment = 2

[node name="ButtonTestAudio" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SoundButton" type="Button" parent="VBoxContainer/ButtonTestAudio"]
layout_mode = 2
focus_neighbor_left = NodePath("../MusicButton")
focus_neighbor_top = NodePath("../../SFXData/SFXSlider")
focus_neighbor_right = NodePath("../MusicButton")
focus_neighbor_bottom = NodePath("../../StartGameButton")
text = "Test sound"

[node name="MusicButton" type="Button" parent="VBoxContainer/ButtonTestAudio"]
layout_mode = 2
focus_neighbor_left = NodePath("../SoundButton")
focus_neighbor_top = NodePath("../../SFXData/SFXSlider")
focus_neighbor_right = NodePath("../SoundButton")
focus_neighbor_bottom = NodePath("../../StartGameButton")
toggle_mode = true
text = "Test music"

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonTestAudio/SoundButton")
focus_neighbor_bottom = NodePath("../MasterData/MasterSlider")
text = "Start
"

[node name="Continue" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -40.0
offset_right = -13.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
text = "Press [Enter] to continue."

[node name="MusicPlay" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_yx1gk")
bus = &"Music"

[node name="MusicPlayingText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.64
anchor_top = 0.566
anchor_right = 0.64
anchor_bottom = 0.566
offset_left = -6.10352e-05
offset_top = -0.128021
offset_right = 60.9999
offset_bottom = 31.872
theme_override_constants/outline_size = 3
text = "Playing!"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_87bsk")
}

[connection signal="value_changed" from="VBoxContainer/MasterData/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/BGMData/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXData/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonTestAudio/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="toggled" from="VBoxContainer/ButtonTestAudio/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="focus_entered" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_focus_exited"]
